<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Top app bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/_56sdp"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/back"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications_settings"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/redditsans_semibold"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Content scroll -->
    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp">

            <!-- Notifications heading -->
            <TextView
                android:id="@+id/tvNotificationsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/redditsans_bold"
                android:textColor="@color/primary_text" />

            <!-- Card 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical"
                android:background="#FFF9F4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_3sdp"
                        android:layout_height="match_parent"
                        android:background="#FFB370"
                        android:layout_gravity="start"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Missed quiz in physics in yesterday"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/redditsans_semibold"
                            android:textColor="@color/primary_text"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="2 hours ago"
                            android:fontFamily="@font/redditsans_regular"
                            android:textSize="12sp"
                            android:textColor="@color/secondary_text"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- Card 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="#FBF4FF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_3sdp"
                        android:layout_height="match_parent"
                        android:background="#996EB5"
                        android:layout_gravity="start"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Badge earned"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/redditsans_semibold"
                            android:textColor="@color/primary_text"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="8 hours ago"
                            android:textSize="12sp"
                            android:fontFamily="@font/redditsans_regular"
                            android:textColor="@color/secondary_text"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- Card 3 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="#F2FFF4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/_3sdp"
                        android:layout_height="match_parent"
                        android:background="#22C55D"
                        android:layout_gravity="start"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_8sdp"
                        android:layout_marginStart="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Teacher Note"
                            android:textSize="@dimen/_11ssp"
                            android:fontFamily="@font/redditsans_semibold"
                            android:textColor="@color/primary_text"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:text="1 day ago"
                            android:textSize="12sp"
                            android:fontFamily="@font/redditsans_regular"
                            android:textColor="@color/secondary_text"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <!-- Settings header -->
            <TextView
                android:id="@+id/tvSettingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/settings"
                android:textSize="@dimen/_13ssp"
                android:fontFamily="@font/redditsans_semibold"
                android:textColor="@color/primary_text" />

            <!-- Settings row reusable style -->
            <!-- Switch Child -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/users"
                    android:contentDescription="@null"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/switch_child"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/primary_text"
                        android:fontFamily="@font/redditsans_semibold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/change_active_child_profile"
                        android:textSize="@dimen/_9ssp"
                        android:fontFamily="@font/redditsans_regular"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Language -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/language"
                    android:contentDescription="@null"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/primary_text"
                        android:fontFamily="@font/redditsans_semibold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/english"
                        android:textSize="@dimen/_9ssp"
                        android:fontFamily="@font/redditsans_regular"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>
            </LinearLayout>

            <!-- Logout -->
            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logout"
                    android:contentDescription="@null"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/primary_text"
                        android:fontFamily="@font/redditsans_semibold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="@string/sign_out_of_your_account"
                        android:textSize="@dimen/_9ssp"
                        android:fontFamily="@font/redditsans_regular"
                        android:textColor="@color/secondary_text"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
