<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_360sdp"
            android:src="@drawable/top_creative"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pi"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_60sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/top_green_eclipse"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pink_ellipse"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pw_logo_green"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_100sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orange_ellipse"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_100sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blue_ellipse"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_140sdp"
            android:layout_marginStart="@dimen/_18sdp"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <LinearLayout
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_300sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to"
                android:fontFamily="@font/redditsans_bold"
                android:textSize="@dimen/_26ssp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quizzy"
                android:layout_gravity="center"
                android:fontFamily="@font/redditsans_bold"
                android:textSize="@dimen/_26ssp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_220sdp"
            android:src="@drawable/sign_in"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/sign_in_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_you_signed_in"
            android:fontFamily="@font/redditsans_semibold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/schoolIdInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@null"
            app:hintEnabled="false"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:boxBackgroundColor="#F9F9F9"
            app:boxStrokeColor="@color/text_input_stroke"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/sign_in_txt"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schoolIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school_id"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/secondary_text"
                android:fontFamily="@font/redditsans_regular"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/studentIdInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@null"
            app:hintEnabled="false"
            app:boxBackgroundColor="#F9F9F9"
            app:boxStrokeColor="@color/text_input_stroke"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1dp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_24sdp"
            app:layout_constraintTop_toBottomOf="@id/schoolIdInputLayout"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/studentIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/student_id"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/secondary_text"
                android:fontFamily="@font/redditsans_regular"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:fontFamily="@font/redditsans_semibold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signinInParent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Signing you in..."
            android:fontFamily="@font/redditsans_semibold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>